samples/_failures_safe/1761706751_04d2dc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_77407630.c: In function ‘main’:
./samples/SAFE/__tmp_77407630.c:168:17: error: expected expression at end of input
  168 |                 if (fgets(to,
      |                 ^~
./samples/SAFE/__tmp_77407630.c:168:21: error: too few arguments to function ‘fgets’
  168 |                 if (fgets(to,
      |                     ^~~~~
In file included from /usr/include/stdio.h:980,
                 from ./samples/SAFE/__tmp_77407630.c:2:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:196:1: note: declared here
  196 | fgets (char *__restrict __s, int __n, FILE *__restrict __stream)
      | ^~~~~
./samples/SAFE/__tmp_77407630.c:168:17: error: expected declaration or statement at end of input
  168 |                 if (fgets(to,
      |                 ^~
./samples/SAFE/__tmp_77407630.c:168:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_77407630.c:168:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_77407630.c:168:17: error: expected declaration or statement at end of input
